# bookmark-word-list

./: .gitignore  README.md  bookmark.py  pyproject.toml
src/: main.py
